--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "express-session": "^1.18.1",
     "mongodb": "^6.10.0",
     "next": "15.0.3",
+    "next-session": "^4.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
