--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_ADDRESS = 'mongodb://root:example@localhost:27017/'
+DB_ADDRESS = 'mongodb+srv://b00149694:AdFSCKDDixpyPWZI@krispykremedb.hwsne.mongodb.net/?retryWrites=true&w=majority&appName=KrispyKremeDB'
