--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "bcrypt": "^5.1.1",
+    "email-validator": "^2.0.4",
     "emailjs": "^4.0.3",
     "iron": "^5.0.6",
     "iron-session": "^8.0.4",
